# Merlin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  merlin.json
API/: Adaptor.cpp  Adaptor.hpp  CMakeLists.txt  OrderUtility.cpp  OrderUtility.hpp  Strategy.cpp  Strategy.hpp
Demo/: CMakeLists.txt  DemoAdaptor.cpp  DemoAdaptor.hpp  DemoStrategy.cpp  DemoStrategy.hpp
cmake/: Conan.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: CMakeLists.txt  Compression.h  Connection.hpp  Enums.hpp  Global.hpp  ManualOrder.hpp  Merlin.hpp  SocketServer.hpp  Strategy.hpp  Structure.hpp
src/: CMakeLists.txt  Compression.cpp  Connection.cpp  External.cpp  Global.cpp  ManualOrder.cpp  Merlin.cpp  SocketServer.cpp  Strategy.cpp
